--- a/dada/extras/documentation/pod_source/features-public_and_private_lists.pod
+++ b/dada/extras/documentation/pod_source/features-public_and_private_lists.pod
@@ -16,15 +16,15 @@ L<http://dadamailproject.com/purchase/pro.html>
 
 =head2 Public Mailing Lists
 
-Public Mailing Lists are mailing lists that anyone could potentially subscribe to, but B<everyone who is subscribed, no matter what, unsubscribe/remove themselves from>. There's no exceptions to this rule and that cannot be emphasized enough. 
+Public Mailing Lists are mailing lists that anyone could potentially subscribe to, but B<everyone who is subscribed, no matter what, can unsubscribe/remove themselves from>. There's no exceptions to this rule and we certainly cannot be emphasized enough.
 
-A public mailing list is a mailing list you would use for promotional marketing. When you see a form on a site, with a tag line of, "I<Subscribe to my mailing list, to learn about my widgets and get special widget deals!>" that's a public mailing list. 
+A public mailing list is a mailing list you would use for promotional marketing. When you see a form on a site, with (say) a tag line of, "I<Subscribe to my mailing list, to learn about my widgets and get special widget deals!>" that's a public mailing list. 
 
-A public mailing list can also be used for general announcements - say for a church, or a club, or a group of people meeting up to do something. If you don't want to receive this information anymore, it's easy to leave the group yourself, without any help. It's not something you're obligated to be a member of. 
+A public mailing list can also be used for general announcements - say for a church, or a club, or a group of people meeting up to do something. If you don't want to receive this information anymore, it's easy to leave the mailing list yourself without any help. It's not something you're obligated to be a member of. 
 
 A public mailing list can also be a discussion list you may join or leave at any time - same ideas as above. 
 
-Subscribing to a Public Mailing Lists needs to be confirmed using a method awkwardly called, B<Closed-Loop Opt-in>. That means that someone that wants to join the mailing list just needs to click a confirmation link in an email sent to them, when they request a subsription. 
+Subscribing to a Public Mailing Lists needs to be confirmed using a method awkwardly called, B<Closed-Loop Opt-in>. That means that someone who wants to join the mailing list just needs to click a confirmation link in an email sent to them after they have requested a subsription. 
 
 That's a big part of what Dada Mail provides in functionality: a B<closed-loop opt-in system>. Following that confirmation URL is your newly subscried member's way of basically saying, "I<Yup, I really do want to subscribe to this mailing list, lemme on!>". Without that confirmation, you have no concrete idea if the person wants on, or not. 
 
@@ -34,7 +34,7 @@ Unsubscribing/Removing oneself from a public mailing list is something that's re
 
 L<http://www.business.ftc.gov/documents/bus61-can-spam-act-compliance-guide-business>
 
-Dada Mail provides an easy to use unsubscription link, that's used in every single mass mailing email message it sends. All a user has to do to remove themselves from a mailing list is click that unsubscription link, fill in their email address in the form provided, and submit the form.
+Dada Mail provides an easy to utilize the unsubscription link, that's required to be in every single mass mailing email message it sends. All a user will have to do to remove themselves from a mailing list is click that unsubscription link, fill in their email address in the form provided, and submit the form, no other confirmation will be needed. 
 
 As long as you provide this B<closed-loop opt in> system to sign up, and this easy way for someone to remove themselves, you'll be running a public mailing list in the best way possible.
 
@@ -42,7 +42,7 @@ As long as you provide this B<closed-loop opt in> system to sign up, and this ea
 
 There's many situations where you want to run a mailing list, but privately. Some examples: 
 
-You have a private, internal, company mailing list where yout talk about private matters that I<is> compulsory - if you work in the company, you also need to be on the mailing list. 
+You have a private, internal, company mailing list where you talk about private matters that I<is> compulsory - if you work in the company, you also need to be on the mailing list. 
 
 Another example would be a private list, made up of a group of professionals that want to discuss matters without publically having these discussion available. 
 
@@ -54,15 +54,15 @@ Futhermore, it would make little sense to have an easy way to have the subscribe
 
 =head2 Differences in administrating a Public and Private Mailing List
 
-Dada Mail allows you to set the B<Mode> of your mailing list: either B<public> or, B<private>. The only difference between either is that a B<private> mailing list does not require you to have the unsubscription link available in your mailing list message - you may remove it. 
+Dada Mail allows you to set the B<Mode> of your mailing list: either B<Public> or, B<Private>. The only difference between either is that a B<Private> mailing list does not require you to have the unsubscription link available in your mailing list message - you may remove it. 
 
 Furthermore, any unsubscription link that is in your mailing list messages will only send a notification to the List Owner that you have requested removal from the mailing list, but will not remove them outright. 
 
-This gives the List Owner total control on who is subscribed to the mailing list, and is in contrast to a public mailing list, where it's the subscribers choice, if they're on the mailing list or not. A request to subscribe may come from a member who's left the company, but is still on the mailing list, without any real need. The request could be used as a friendly reminder that since they're not in the company anymore, they shouldn't be getting emails like the ones they're getting. 
+This gives the List Owner total control on who is subscribed to the mailing list, and is in contrast to a public mailing list, where it's the I<subscribers> choice if they're on the mailing list or not. A request to subscribe may come from a member who's left the company, but is still on the mailing list without any real need. The request could be used as a friendly reminder that since they're not in the company anymore, they shouldn't be getting emails like the ones they're getting. 
 
 Options of how someone may subscribe to a private mailing list is up to the List Owner - if they would like, they could set up their private mailing list so that everyone can subscribe, or that subscriptions are made only by invitations, or after being approved by the List Owner, or even that the only way someone may subscribe is for the List Owner adding the addresses themselves - it's up to the List Owner to set up things they way that they'd like, depending on the situation. Dada Mail gives you a massive amount of flexibility. 
 
-Private Mailing Lists may also be B<hidden>, meaning they're not listed anywhere within Dada Mail's public interface. Public mailing lists cannot be hidden (this is a change from past versions, where public mailing lists could have also been hidden).
+Private Mailing Lists may also be B<hidden>, meaning they're not listed anywhere within Dada Mail's public interface. Public mailing lists cannot be hidden.I<(this is a change from past versions, where public mailing lists could have also been hidden.)>
  
 Public Mailing Lists will always have the option for members to unsubscribe, and there's no way to disable this - doing so will potentially have you running a mailing list that doesn't follow what you're legally obligated to provide. 
 
