--- a/dada/extras/documentation/pod_source/changes_7_x.pod
+++ b/dada/extras/documentation/pod_source/changes_7_x.pod
@@ -2,6 +2,30 @@
 
 =head1 Dada Mail Changelog for v7.x
 
+=head2 7.2.2
+
+=head2 Changes 7.2.2
+
+=head3 Rich Text Editor Upgrades
+
+=over
+
+=item * CKeditor upgraded to B<v4.4.5>
+
+=item * TinyMCE upgraded to B<v4.1.5>
+
+=back
+
+=head3 File Browser/Uploaders Upgrades
+
+=over
+
+KCFinder upgraded to B<v3.12>
+
+Core5 Filemanger upgraded to B<v1.4.0>
+
+=back
+
 =head2 7.2.1
 
 =head2 Changes 7.2.1
