--- a/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
@@ -348,11 +348,24 @@ Confirmation Tokens are the random letters and numbers you'll see at the end of 
 
 The token corresponds to information in your database, information we don't necessarily want embedded in the URL itself. 
 
-Dada Mail keeps this information around for awhile, so that these confirmation links work. 
-But, this information can take up space in your database, so there is an expiration date associated with them. 
-By default, Dada Mail keeps the information around for 60 days, before removing them. 
+Dada Mail keeps this information around for awhile, so that these confirmation links work.But, this information can take up space in your database, so there is an expiration date associated with them. By default, Dada Mail keeps the information around for 60 days, before removing them. 
 
 If you're running a public mailing list, we do not suggest setting this to be under 30 days, as the unsubscribe link that depends on these confirmation tokens is required by the CAN SPAM law to be operable for 30 days. 
+
+=head2 Configure Program Name
+
+The Program Name, set to either B<Dada Mail> or, B<Pro Dada> by default may be changed here. This name change will be reflected throughout the entire application, but the image used by default in the upper left hand corner will also need to be changed. We do suggest that you simply make your own template, rather than swapping this one image out. 
+
+=head2 Configure Secure Program URL
+
+The Secure Program URL holds the URL you'd like to use for Dada Mail's List Control Panel. For example, if you can 
+map your Program URL to either an, C<http://> URL, or a, C<https://> address, you can set regular access to, 
+
+    http://example.com/cgi-bin/dada/mail.cgi
+
+and access to the List Control Panel on a secure connection: 
+
+    https://example.com/cgi-bin/dada/mail.cgi
 
 =head2 Configure Amazon SES 
 
@@ -361,3 +374,8 @@ You may set up Dada Mail to send via Amazon's Simple Email Service. This is a th
 Amazon SES does have a long list of required Perl CPAN modules that need to be installed, before SES sending will work. If any modules are not installed, the installer will list which CPAN modules are still needed. 
 
 To configure Dada Mail to use SES sending, first check the checkbox labeled,B< Configure Amazon SES>  Then, you will need to give the installer your B<AWS Access Key ID> and a B<AWS Secret Access Key>. To test your information, click the, B<Test Your AWS Credentials> button. 
+
+=head2 Configure Mandrill
+
+ 
+
